--- a/src/de/inetsource/gui/PropertyEditor.form
+++ b/src/de/inetsource/gui/PropertyEditor.form
@@ -177,6 +177,9 @@
                   <ResourceString bundle="de/inetsource/gui/Bundle.properties" key="PropertyEditor.execute.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="executeActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
